@startuml ReservationSystem

skinparam classFontStyle bold
skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam nodesep 60
skinparam ranksep 85
skinparam linetype polyline
hide circle

class User {
  {field} + <u>email</u> : VARCHAR(255)
  {field} + pwd_hash : VARCHAR(255)
  {field} + user_role : ENUM(diner, staff)
  {field} + fname : VARCHAR(100)
  {field} + lname : VARCHAR(100)
  {field} + user_phone : VARCHAR(20)
  {field} + acct_created : DATETIME
}

class Restaurant {
  {field} + <u>rest_phone</u> : VARCHAR(20)
  {field} + rest_name : VARCHAR(255)
  {field} + street : VARCHAR(255)
  {field} + zip : VARCHAR(10)
  {field} + city : VARCHAR(100)
  {field} + state : VARCHAR(50)
  {field} + cuisine : VARCHAR(100)
  {field} + price_range : ENUM(1,2,3,4)
  {field} + image_url : VARCHAR(255)
  {field} + rest_created : DATETIME
}

class RestaurantHours {
  {field} + day_of_week : ENUM(0-6)
  {field} + open_time : TIME
  {field} + close_time : TIME
  {field} + is_closed : BOOLEAN
}

class TimeSlot {
  {field} + <u>slot_date</u> : DATE
  {field} + <u>slot_time</u> : TIME
  {field} + slot_capacity : INT
  {field} + /available_spots : INT
}

class Reservation {
  {field} + <u>res_num</u> : VARCHAR(20)
  {field} + party_size : INT
  {field} + special_req : TEXT
  {field} + res_status : ENUM(pending, confirmed, seated,
  {field}   completed, cancelled, no_show)
  {field} + res_created : DATETIME
}

class ReservationStatusHistory {
  {field} + changed_at : DATETIME
  {field} + changed_to : ENUM(pending, confirmed, seated,
  {field}   completed, cancelled, no_show)
}

class Review {
  {field} + rating : INT
  {field} + comment : TEXT
  {field} + review_created : DATETIME
}

Restaurant  "1..1" <-- "1..*" RestaurantHours
Restaurant  "1..1" <-- "0..*" TimeSlot

User        "0..*" -- "0..*" Restaurant : reviews >
(User, Restaurant) .. Review

Restaurant  "0..1" <-- "0..*" User : employs <

TimeSlot    "1..1" <-- "0..*" Reservation

Reservation "0..*" -- "0..*" User : changed by >
(Reservation, User) .. ReservationStatusHistory

User        "1..1" <-- "0..*" Reservation : booked by >

@enduml
